# ResumeAnalyzer

./: README.md  Resume-Analyzer.docx
Backend/: READMe.md  pyproject.toml
Backend/app/: main.py
Backend/app/controllers/: resume_controller.py
Backend/app/core/: config.py
Backend/app/db/: database.py
Backend/app/models/: resume.py
Backend/app/routes/: resume_routes.py
Backend/app/schemas/: resume_schema.py
Backend/app/services/: ner_service.py
Backend/test/: test1.py  test2.py
